2013-12-09  Peter Molnar  <pmolnar.u-szeged@partner.samsung.com>

        Fix handling of 'inherit' and 'initial' for grid lines.
        https://bugs.webkit.org/show_bug.cgi?id=125223

        Reviewed by Darin Adler.

        'initial' and 'inherit' are always allowed values for CSS properties.
        As the CSSParser handles them automatically, those 2 values were never
        taken care of in StyleResolver, leading to crashes.

        Added tests cases for 'inherit' and 'initial' to the following tests:

        fast/css-grid-layout/grid-item-column-row-get-set.html
        fast/css-grid-layout/grid-item-end-after-get-set.html
        fast/css-grid-layout/grid-item-start-before-get-set.html

        Patch backported from Blink: https://src.chromium.org/viewvc/blink?revision=149257&view=revision

        * css/StyleResolver.cpp:
        (WebCore::StyleResolver::applyProperty):
        * rendering/style/RenderStyle.h:
        * rendering/style/StyleGridItemData.cpp:
        (WebCore::StyleGridItemData::StyleGridItemData):

2013-12-09  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Inspector.json and CodeGenerator tweaks
        https://bugs.webkit.org/show_bug.cgi?id=125321

        Reviewed by Timothy Hatcher.

        * inspector/protocol/Runtime.json:
        Runtime.js was depending on Network.FrameId. This is a layering
        violation, so ideally we can fix this later. For now, just copy
        the FrameId type into Runtime. They are strings so all is good.

        * inspector/CodeGeneratorInspector.py:
        (Generator.EventMethodStructTemplate.append_epilog):
        * inspector/CodeGeneratorInspectorStrings.py:
        Improve --help usage information.
        Make the script work with a single domain json file.
        Add ASCIILiteral's where appropriate.

2013-12-09  Nick Diego Yamane  <nick.yamane@openbossa.org>

        [Nix] Fix file name typo in PlatformNix.cmake
        https://bugs.webkit.org/show_bug.cgi?id=125457
