@@ -1,3 +1,12 @@
+2013-12-09  peavo@outlook.com  <peavo@outlook.com>
+
+        [WinCairo] OpenGL compile error.
+        https://bugs.webkit.org/show_bug.cgi?id=125383
+
+        Reviewed by Darin Adler.
+
+        * platform/graphics/opengl/Extensions3DOpenGLES.h: Define GL_HALF_FLOAT_ARB on Windows when OPENGL_ES_2 is used.
+
 2013-12-09  Peter Molnar  <pmolnar.u-szeged@partner.samsung.com>
 
         Fix handling of 'inherit' and 'initial' for grid lines.
